--- a/create_stack.css
+++ b/create_stack.css
@@ -6,7 +6,7 @@
 .highlight {
   width: 200px;
 	height: 10px;	
-  border: 1px solid yellow;
+  background-color: yellow;
 }
 input {
   position: absolute;
